- `site delete-branch` will delete a multidev environment's branch (For sites with multidev access) (#395)
- `site delete-env` now has an optional --remove-branch flag (#395)

### Fixed
- `organizations sites` shows all the organization's sites, not just the first 100 (#371)

### Changed
- `site wipe` asks for confirmation (#382)
- `backup get` will not offer in-progress/incomplete backups for download (#386)
- `backup list` identifies 0-byte backups as "Incomplete" (#386)
- `site clone-env` is now `site clone-content`. Flags have changed from inclusive --db and --files to exclusive --db-only and --files-only and defaults to cloning both. (#403)

### Deprecated
- `sites delete` will be removed in v1.0.0 (#370)

##[0.6.1] - 2015-08-11
### Fixed
- `site deploy` will not overwrite the Live environment's content (#373) 

### Changed
- `site deploy` has a `--clone-live-environment` flag for copying Live content into Test (#373)

### Deprecated
- `site deploy` `--from` flag has been deprecated and is non-functional

##[0.6.0] - 2015-08-10
### Added
- `cli console` (Instantiates a console within Terminus)
- `site init-env` (Initializes new test or live environments on Pantheon)
- `site merge-from-dev` (Merges master/dev environment into a multidev environment)
- `site merge-to-dev` (Merges a multidev environment into master/dev)
- `sites cache` (Lists sites in cache)
- `sites mass-update` (Runs upstream updates on all dev sites)
- Element flag to `site import` (Select specific element[s] to import)
- Behavior tests
- QA report tests
- Linter tools
- CHANGELOG.txt

### Fixed
- `site import`
- `site team list`
- Password display on login failure
- 100x loop on workflow failure

### Changed
- Dashboard URL given by `site dashboard` from https://dashboard.getpantheon.com/… to https://dashboard.pantheon.io/…
- `sites create` to make org parameter optional
- Dependencies
- README

### Deprecated
- Flag --nocache